k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climate
  namespace: climate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: climate.ingress.realmclick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: climate
                port:
                  number: 80
  tls:
    - hosts:
        - climate.ingress.realmclick.com
      secretName: climate-tls
